// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

generator dbml {
    provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")

}

model User {
  id           String       @id 
  username         String
  email        String       @unique
  password     String
  role         Role         @default(USER)
  post         Post[]

  @@map("user")
}

model Post {
  id     String    @id
  user_id String? @map("user_id")
  user   User?   @relation(fields: [user_id], references: [id])
  title  String
  content String

  @@map("post")
}

enum Role {
  USER
  ADMIN
}

model Product {
  id          String             @id 
  name        String          // Teh
  author      String          // jamal
  category_id String?            @map("category_id")
  genre_id    String?           @map("genre_id")
  category    CategoryProduct? @relation(fields: [category_id], references: [id])
  genre       GenreProduct?    @relation(fields: [genre_id], references: [id])
  created_at  DateTime        @default(now()) @map("created_at")
  updated_at  DateTime        @updatedAt @map("updated_at")

  @@map("product")
}

model CategoryProduct {
  id                 String       @id
  name               String    // Category Product Name: makanan & minuman
  created_at         DateTime  @default(now())
  updated_at         DateTime  @updatedAt
  Product            Product[]

  @@map("category_product")
}

model GenreProduct {
  id        String      @id
  name      String
  created_at DateTime    @default(now())
  updated_at DateTime   @updatedAt
  products  Product[]

  @@map("genre_product")
}
