//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table user {
  id String [pk]
  username String [not null]
  email String [unique, not null]
  password String [not null]
  role Role [not null, default: 'USER']
  post post [not null]
}

Table post {
  id String [pk]
  user_id String
  user user
  title String [not null]
  content String [not null]
}

Table product {
  id String [pk]
  name String [not null]
  author String [not null]
  category_id String
  genre_id String
  category category_product
  genre genre_product
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table category_product {
  id String [pk]
  name String [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  Product product [not null]
}

Table genre_product {
  id String [pk]
  name String [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  products product [not null]
}

Enum Role {
  USER
  ADMIN
}

Ref: post.user_id > user.id

Ref: product.category_id > category_product.id

Ref: product.genre_id > genre_product.id